--- a/templates/materials.html
+++ b/templates/materials.html
@@ -14,6 +14,7 @@
         <thead>
             <tr>
                 <th>Таблиця "Product"</th>
+                <th>Ціна товару грн за шт без ПДВ</th>
                 <th>Таблиця "Expense"</th>
                 <th>Таблиця "Batch"</th>
             </tr>
@@ -25,6 +26,11 @@
                 <td>
                     {% if i < products|length %}
                     {{ products[i].name }} ({{ products[i].quantity }} {{ products[i].unit }})
+                    {% endif %}
+                </td>
+                <td>
+                    {% if i < products|length %}
+                    {{ products[i].price }}
                     {% endif %}
                 </td>
                 <td>
