--- a/templates/products_add.html
+++ b/templates/products_add.html
@@ -9,22 +9,25 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style1.css') }}">
 </head>
 <body>
-    <h1>Прибуткова накладна</h1>
-    <form method="POST" action="/products/add">
-        <label for="name">Назва товару:</label>
-        <input type="text" name="name" required><br>
+<h1>Прибуткова накладна</h1>
+<form method="POST" action="/products/add">
+    <label for="name">Назва товару:</label>
+    <input type="text" name="name" required><br>
 
-        <label for="quantity">Кількість:</label>
-        <input type="number" name="quantity"><br>
+    <label for="quantity">Кількість:</label>
+    <input type="number" name="quantity"><br>
 
-        <label for="unit">Одиниця виміру:</label>
-        <input type="text" name="unit"><br>
+    <label for="unit">Одиниця виміру:</label>
+    <input type="text" name="unit"><br>
 
-        <div class="button-container">
-            <button type="submit">Додати товар</button>
-            <a href="/" class="back-button">Назад</a>
-       </div>
-    </form>
+    <label for="price">Ціна з ПДВ:</label>
+    <input type="text" name="price"><br>
+
+    <div class="button-container">
+        <button type="submit">Додати товар</button>
+        <a href="/" class="back-button">Назад</a>
+    </div>
+</form>
 
 </body>
 </html>
